fixed top section height on mobile devices

--- a/_sass/main-content.scss
+++ b/_sass/main-content.scss
@@ -9,7 +9,7 @@ body {
 }
 
 .parallax-container {
-    height: 100vh;
+    // height: 100vh;
     .greet-container {
         .divider {
             background-color: rgba(255, 255, 255, .2);
